--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Flask==3.0.0
 Flask-SQLAlchemy==3.1.1
 SQLAlchemy==2.0.23
 firebase-admin==6.4.0
-google-generativeai==0.3.2
+google-genai>=0.3.0
 requests==2.31.0
 python-dotenv==1.0.0
 gunicorn==21.2.0
